# spectrik

./: .gitignore  .justfile  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml
.github/workflows/: precommit.yaml  pypi-publish.yaml  release.yaml  unit-tests.yaml
docs/plans/: 2026-02-18-hcl-loader-design.md  2026-02-18-workspace-loader-cleanup-design.md  2026-02-18-workspace-loader-cleanup-impl.md  2026-02-19-workspace-redesign-design.md  2026-02-19-workspace-redesign-impl.md  2026-02-20-hcl-interpolation-design.md  2026-02-20-hcl-interpolation-impl.md  2026-02-20-jinja2-templating-design.md  2026-03-09-progress-callbacks-design.md  2026-03-09-progress-callbacks.md  2026-03-10-mixed-project-types-design.md  2026-03-10-mixed-project-types-plan.md  2026-03-10-optional-equals-design.md  2026-03-10-project-lifecycle-hooks-design.md
docs/specs/: 2026-03-09-build-result-design.md
src/spectrik/: __init__.py  blueprints.py  context.py  event.py  hcl.py  projects.py  resolve.py  spec.py  specop.py  specs.py  workspace.py
tests/: test_blueprints.py  test_context.py  test_event.py  test_hcl.py  test_integration.py  test_projects.py  test_refs.py  test_resolve.py  test_specs.py  test_workspace.py
